--- a/src/components/Menu-Bar/App.module.scss
+++ b/src/components/Menu-Bar/App.module.scss
@@ -1,21 +1,35 @@
 .menuBar {
     height: 100vh;
     width: 20vw;
-    background-color: yellow;
-
+    border-right: solid 1px rgb(189, 183, 183);
+    justify-content: center;
+    flex-direction: column;
+    
     .menuHeader {
+        
+        
         ul {
-            margin-top: 10%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+
+            li:hover {
+                background-color: orange;
+            }
             
             li {
-                background-color: red;
-                margin: 2px;
-                padding: 5px;
-
-                a {
-                    color: #000;
-                    border-radius: 5px;
-
+                margin: 1%;
+                padding: 7%;
+                border-radius: 10px;
+                width: 70%;
+                height: 50%;
+                transition: ease 0.5s;
+                cursor: pointer;
+                
+                    
+                    a {
+                        color: #000;
+                        font-weight: bold;
                 }
             }
 
